--- a/index.html
+++ b/index.html
@@ -1,27 +1,16 @@
 <!DOCTYPE html>
 <html>
-<title>DigitaçãoProject</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
+<head>
+	<title>Teste de digitação</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 <body>
-    <div class="w3-container w3-center">
-        <h2>Teste digitação</h2>
-        <p>Vamos praticar</p>
-        <div class="w3-hover-shadow w3-centered" style="width:50%;">
-            <header class="w3-container w3-blue">
-                <h1>Digite a frase abaixo</h1>
-            </header>
-            <div class="w3-container">
-                <p id="frase">Teste de digitação, Vamos ver do que você é capaz</p>
-            </div>
-            <footer class="w3-container w3-blue">
-            </footer>
-        </div>
-    </div>
-    <script src="writetest.js">
-    </script>
+	<h1>Vamos ver do que você é capaz</br>
+        Escreva corretamente a frase abaixo</h1>
+	<p id="quote"></p>
+	<textarea id="answer" rows="4" cols="50"></textarea>
+	<button id="submit">Submit</button>
 
+	<script src="script.js"></script>
 </body>
-
 </html>
