--- a/index.html
+++ b/index.html
@@ -2,15 +2,24 @@
 <html>
 <head>
 	<title>Teste de digitação</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+<header>
+		<h1>GoGo Type</h1>
+		<nav>
+			<ul>
+				<li><a href="C:\Users\chrda\TypeGameProject00\maisinformações\index.html">Mais informações</a></li>
+			</ul>
+		</nav>
+	</header>
 <body>
-	<h1>Vamos ver do que você é capaz</br>
-        Escreva corretamente a frase abaixo</h1>
-	<p id="quote"></p>
+	<div class="container">
+  <h2>Vamos ver do que você é capaz</br>
+    Escreva corretamente a frase abaixo</h2>
+  <p id="quote"></p>
+</div>
 	<textarea id="answer" rows="4" cols="50"></textarea>
-	<button id="submit">Submit</button>
-    
+	<p id="submit"></p>
 	<script src="script.js"></script>
 </body>
 </html>
