--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		</nav>
 	</header>
 <body>
+	<audio autoplay loop>
+		<source src="/AUDIO/backgroundmusic.mp3" volume="0.5" type="audio/mpeg">
+	  </audio>
 	<div class="container">
   <h2>Vamos ver do que você é capaz</br>
     Escreva corretamente a frase abaixo</h2>
