--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		</nav>
 	</header>
 <body>
-	<audio autoplay controls loop>
-		<source src="background-music.mp3" type="audio/mpeg">
-	  </audio>	  
+	<audio autoplay id ="myaudio" loop>
+		<source src="./AUDIO/Background-music.mp3" type="audio/mpeg">
+	  </audio>  
 	  
 	<div class="container">
   <h2>Vamos ver do que você é capaz</br>
