--- a/maisinformações/index.html
+++ b/maisinformações/index.html
@@ -5,7 +5,7 @@
 <header>		
         <nav>
 			<ul>
-				<li><a href="C:\Users\Evilj\Desktop\TypeGameProject00-main\index.html"><h1>GoGo Type</h1></a></li>
+				<li><a href="C:\Users\chrda\TypeGameProject00\index.html"><h1>GoGo Type</h1></a></li>
 			</ul>
 		</nav>
 	</header>	
