--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<h1>GoGo Type</h1>
 		<nav>
 			<ul>
-				<li><a href="C:\Users\chrda\TypeGameProject00\maisinformações\index.html">Mais informações</a></li>
+				<li><a href="maisinformações/index.html">Mais informações</a></li>
 			</ul>
 		</nav>
 	</header>
